--- a/index.html
+++ b/index.html
@@ -1,43 +1,20 @@
-<!DOCTYPE html>
+<!DOCTYPE html> 
 <html>
-<head>
-<title>kha123</title>
-<meta charset="utf-8">
-<link rel="stylesheet" href="style.css">
-<link rel="stylesheet" href="css_chung.css">
+  <head>
+    <link rel="stylesheet" href="style.css">
+    <meta charset="utf-8">
+    <title>demo1</title>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="assets/icons/fontawesome-free-6.0.0-web/css/all.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  </head>
+  <body>
+   <div class="web">
+<!--hom nay code background animation-->
+<canvas class="main_canvas" >
+</canvas>
 
-<link rel="stylesheet" href="assets/base web/grid-css.css">
-<link rel="stylesheet" href="assets/icons/fontawesome-free-6.0.0-web/css/all.css">
-
-<link href="https://fonts.googleapis.com/css2?family=Heebo:wght@200;300;400&family=Poppins:ital,wght@0,200;0,400;0,500;0,600;1,300;1,400;1,500&display=swap" rel="stylesheet">
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-</head>
-<body>
-    <div class="web">
-
-        <section class="grid_container">
-            <div class="item_1"><img   src="https://www.nodemy.vn/projects/html-css-js/image-gallery/img1.jpeg"></div>
-            <div class="item_2"><img   src="https://www.nodemy.vn/projects/html-css-js/image-gallery/img2.jpeg"></div>
-            <div class="item_3"><img   src="https://www.nodemy.vn/projects/html-css-js/image-gallery/img3.jpeg"></div>
-            <div class="item_4"><img   src="https://www.nodemy.vn/projects/html-css-js/image-gallery/img4.jpeg"></div>
-            <div class="item_5"><img   src="https://www.nodemy.vn/projects/html-css-js/image-gallery/img5.jpeg"></div>
-            <div class="item_6"><img   src="https://www.nodemy.vn/projects/html-css-js/image-gallery/img6.jpeg"></div>
-            <div class="item_7"><img   src="https://www.nodemy.vn/projects/html-css-js/image-gallery/img7.jpeg"></div>
-            <div class="item_8"><img   src="https://www.nodemy.vn/projects/html-css-js/image-gallery/img8.jpeg"></div>
-
-           
-        </section>
-        <div class="shadow none"></div>
-        <i class="close fa-solid fa-xmark none"></i>
-
-        <section class="check_picture none">
-            <i class="fa-solid fa-chevron-left notopen "></i>
-            <img class="main_check">
-            <i class="fa-solid fa-chevron-right notopen"></i>
-        </section>
-    </div>
-    <div class="none chong_chay"></div>
-    <script src="./mainjs.js"></script>
-</body>
+   </div>
+    <script src="mainjs.js"></script>
+  </body>
 </html>
