--- a/index.html
+++ b/index.html
@@ -10,11 +10,16 @@
   </head>
   <body>
    <div class="web">
-<!--hom nay code background animation-->
-<canvas class="main_canvas" >
-</canvas>
+<canvas></canvas>
+<span class="number"> 0</span>
+<div class="play"><i class="fa-solid fa-play"></i></div>
+<div class="menu_dead">
+  <section><i>1</i> <span>__ __ __</span> </section>
+  <section><i>2</i> <span>__ __ __</span> </section>
+  <section><i>3</i> <span>__ __ __</span> </section>
 
+</div>
    </div>
-    <script src="mainjs.js"></script>
+    <script src="mainjs.js" type="module"></script>
   </body>
 </html>
