--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <link rel="stylesheet" href="style.css">
     <meta charset="utf-8">
-    <title>demo1</title>
+    <title>flabby bird</title>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="assets/icons/fontawesome-free-6.0.0-web/css/all.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
